Some beta release work

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                                           Visualizations will include interesting views on cinematography datasets.
                                           The goal is to show the movies data from different perspectives. </br>
                                           Visualizations will be divided on two topics. One visualization is focused on locations of movies filmed in San Francisco. Second is focused on movie ratings analysis.
+                                        </br>
+                                        In general, when you think of locations where the movies masteprieces were filmed, Los Angeles and New York come to mind first.
+
                                         </span>
                                       </span>
                                     </h6>
@@ -152,6 +155,7 @@
                                   <h6 class="font_12" style="line-height:1.5em;">
                                     Website style: <u><a href="https://www.wix.com/account/sites">Wix</a></u> </br>
                                     Prototype Applications: <u><a href="https://www.tableau.com/">Tableau</a></u>, <u><a href="https://app.rawgraphs.io/">Raw Graphs</a></u> </br>
+                                    D3-simple-slider: <u><a href="https://bl.ocks.org/johnwalley/e1d256b81e51da68f7feb632a53c3518">bl.ocks</a></u> </br>
                                     Coming soon...
                                   </h6>
                                 </div>
