--- a/alphalocations.html
+++ b/alphalocations.html
@@ -88,48 +88,11 @@
                             <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
 
                               <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Movies in San Francisco</span></h2>
-                                </br>
-                                <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
-                                    <a href="alphalocations.html">Aplha Prototype → </a>
-                                </h2>
+                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Alpha Prototype</span></h2>
                               </div>
-
-                              <div data-packed="true" style="width: 960px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
-                                <figure>
-                                  <svg width="960" height="500" id="vis">
-                                    <g id="plot">
-                                      <g id="basemap"></g>
-                                      <g id="streets" pointer-events="none"></g>
-                                      <g id="outline" pointer-events="none"></g>
-                                      <g id="movies"></g>
-                                      <g id="tooltip" pointer-events="none"></g>
-                                      <g id="details" pointer-events="none"></g>
-                                    </g>
-                                    <g id="legend" pointer-events="none"></g>
-                                  </svg>
-                                  <figcaption>
-                                    Source: <a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">SF Film Locations in San Francisco</a> (<a
-                                    href="https://data.sfgov.org/Geographic-Locations-and-Boundaries/Analysis-Neighborhoods/p5b7-5n3h">Neighborhoods</a>, <a href="https://data.sfgov.org/Geographic-Locations-and-Boundaries/Streets-Active-and-Retired/3psu-pn9h">Streets</a>)
-                                  </figcaption>
-
-                                  <div class="align-items-center">
-                                    </br>
-                                    <div width="960" class="col-sm-2">
-                                      <p id="value-simple"></p>
-                                    </div>
-                                    <div class="col-sm">
-                                      <div id="slider-simple"></div>
-                                    </div>
-                                  </div>
-
-
-                                </figure>
-                                <script>
-                                  drawMap();
-                                </script>
+                              <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                                <img src="prototypes/movie_locations_map.png" alt="Prototype_map">
                               </div>
-
                             </div>
                           </div>
                         </div>
@@ -156,53 +119,14 @@
                   <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
 
                     <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                      <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Question</span></h2>
+                      <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Why Map</span></h2>
                     </div>
-                    <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                    <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                       <h6 class="font_6" style="line-height:1.5em;">
-                        The exact question you are trying to answer with this prototype.
-                        Your prototype will be evaluated within the context of this question.
-                        For example, "is there a visible pattern of [metric] over [time range]" or "how does [some subcategory] compare to [another subcategory]" are good questions.
-                        However, "what [category] has the [largest/smallest] value of [some column]" can be answered with simple statistics and not a good question for visualization.
-                        For the best results, you should come up with a question first, then the prototype.
+                        I find it interesting to see the map of all locations where the movies were filmed.</br>
+                        The data wrangling includes a lot of manual work. Each table row was processed to get the full address from location entered by user. After getting the full address of the location, the data was entered to a special <u><a
+                            href="https://www.gpsvisualizer.com/geocoder/">application</a></u> to get latitude and longitude coordiantes for a map visualization.
                       </h6>
-                    </div>
-
-                    <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
-                      <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                        <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Answer</span></h2>
-                      </div>
-                      <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
-                        <h6 class="font_6" style="line-height:1.5em;">
-                          The answer to the question you were able to learn from the prototype. It is possible your prototype does not do a great job of answering your question---
-                          that is a positive result of this exercise. You need to iterate multiple different visualization techniques and designs of a single visualization
-                          to reach the final version!
-                        </h6>
-                      </div>
-                    </div>
-
-                    <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
-                      <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                        <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Encoding</span></h2>
-                      </div>
-                      <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
-                        <h6 class="font_6" style="line-height:1.5em;">
-                          Describe how your visualization is encoded. Use precise visualization terminology,
-                          including the name of the overall visualization technique and the visual channels you are using to encode the data.
-                        </h6>
-                      </div>
-                    </div>
-
-                    <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
-                      <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                        <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Interactivity</span></h2>
-                      </div>
-                      <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
-                        <h6 class="font_6" style="line-height:1.5em;">
-                          Describe your planned interactivity.
-                          Use precise visualization terminology to describe the type of interactivity, and what mouse or keyboard events will trigger that interactivity.
-                        </h6>
-                      </div>
                     </div>
 
                   </div>
