--- a/ratings.html
+++ b/ratings.html
@@ -85,35 +85,25 @@
                           <div id="comp-ividcu8kinlineContent-gridWrapper" data-mesh-internal="true">
                             <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
                               </br>
+                              <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
+                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Movies Ratings</span></h2>
+                                </br>
+                                <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
+                                    <a href="alpharatings.html">Aplha Prototypes → </a>
+                                </h2>
 
-                              <div data-packed="true" style="width: 433px; pointer-events: none;" class="txtNew" id="comp-iw0qom55">
-                                <h6 class="font_6"><span style="letter-spacing:0.05em;">
-                                    <strong>Genre - Gross - Imdb</strong><br />
-                                  </span></h6>
-                                <img src="prototypes/genre-gross-imdb(2).png" alt="Prototype_packing" height="500" width="500">
                               </div>
 
-                              <div data-packed="true" style="width: 433px;" class="txtNew" id="comp-jtfr9hek">
-                                <h6 class="font_6"><span style="letter-spacing:0.05em;">
-                                    <strong>Rating - Gross - Imdb</strong><br />
-                                  </span></h6>
-                                <img src="prototypes/tomatoesratings-audienceratings.png" alt="Prototype_hierarchy" height="600" width="600">
-                              </div>
+                              <div data-packed="true" style="width: 800px; margin-top: 160px" class="txtNew" id="comp-iw0qom55">
 
-                              <div id="comp-ividcu8s" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="217" data-height="40" style="height: 40px; min-height: 30px; width: 217px;" class="style-ivko0jau"
-                                data-state="desktop shouldUseFlex left">
-                              </div>
-                            </div>
-                            <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
+                                <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Hierarchial Sunburst</span></h2>
+                                <h2 class="font_11" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">(with year-genre hierarchy, size represents imdb score and color scale is build on gross values)</span></h2>
                               </br>
-
-                              <div data-packed="true" style="width: 433px; pointer-events: none;" class="txtNew" id="comp-iw0qom55">
-                                <img src="prototypes/imdbgross.png" alt="Prototype_packing" height="500" width="500">
+                                <img src="prototypes/beta/year-genre-imdb-gross.png" alt="Prototype_hierarchy" height="600" width="600">
+                                <img src="prototypes/beta/simplecharts.png" alt="Prototype_simple" height="600" width="960">
                               </div>
 
-                              <div data-packed="true" style="width: 433px;" class="txtNew" id="comp-jtfr9hek">
-                                <img src="prototypes/grossbudget.png" alt="Prototype_hierarchy" height="600" width="600">
-                              </div>
+
 
                               <div id="comp-ividcu8s" data-align="left" data-disabled="false" data-margin="0" data-should-use-flex="true" data-width="217" data-height="40" style="height: 40px; min-height: 30px; width: 217px;" class="style-ivko0jau"
                                 data-state="desktop shouldUseFlex left">
@@ -144,13 +134,53 @@
                   <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
 
                     <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                      <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Why Ratings</span></h2>
+                      <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Question</span></h2>
                     </div>
-                    <div data-packed="true" style="width: 606px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                    <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                       <h6 class="font_6" style="line-height:1.5em;">
-                        The overall idea for the ratings prototypes and visualizations is to find dependecies between movie genres and these parameters: gross, budget, imdb ratings.
-                        This page shows different prototypes to see the overall idea.
+                        The exact question you are trying to answer with this prototype.
+                        Your prototype will be evaluated within the context of this question.
+                        For example, "is there a visible pattern of [metric] over [time range]" or "how does [some subcategory] compare to [another subcategory]" are good questions.
+                        However, "what [category] has the [largest/smallest] value of [some column]" can be answered with simple statistics and not a good question for visualization.
+                        For the best results, you should come up with a question first, then the prototype.
                       </h6>
+                    </div>
+
+                    <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
+                      <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
+                        <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Answer</span></h2>
+                      </div>
+                      <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                        <h6 class="font_6" style="line-height:1.5em;">
+                          The answer to the question you were able to learn from the prototype. It is possible your prototype does not do a great job of answering your question---
+                          that is a positive result of this exercise. You need to iterate multiple different visualization techniques and designs of a single visualization
+                          to reach the final version!
+                        </h6>
+                      </div>
+                    </div>
+
+                    <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
+                      <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
+                        <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Encoding</span></h2>
+                      </div>
+                      <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                        <h6 class="font_6" style="line-height:1.5em;">
+                          Describe how your visualization is encoded. Use precise visualization terminology,
+                          including the name of the overall visualization technique and the visual channels you are using to encode the data.
+                        </h6>
+                      </div>
+                    </div>
+
+                    <div id="SITE_FOOTERinlineContent-gridContainer" data-mesh-internal="true">
+                      <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
+                        <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Interactivity</span></h2>
+                      </div>
+                      <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
+                        <h6 class="font_6" style="line-height:1.5em;">
+                          Describe your planned interactivity.
+                          Use precise visualization terminology to describe the type of interactivity, and what mouse or keyboard events will trigger that interactivity.
+                        </h6>
+                      </div>
                     </div>
 
                   </div>
