Almost done with beta

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 
 
                       <!-- THE CAMERA BLOCK  -->
-                      <section data-responsive="true" data-is-screen-width="true" data-col-margin="0" data-row-margin="0" class="strc1" id="comp-ivku2gb93" style="left: 0px; width: 100%; min-width: 980px; height: auto; margin-left: 0px;">
+                      <section data-responsive="true" data-is-screen-width="true" data-col-margin="0" data-row-margin="0" class="strc1" id="comp-ivku2gb93" style="left: 0px; width: 100%; min-width: 1200px; height: auto; margin-left: 0px;">
                         <div data-page-id="jqe35" data-enable-video="true" class="strc1balata" id="comp-ivku2gb93balata"
-                          style="position: absolute; top: 0px; width: calc(100% - 0px); height: 100%; overflow: hidden; pointer-events: auto; min-width: 980px; left: 0px; right: 0px; bottom: 0px;">
+                          style="position: absolute; top: 0px; width: calc(100% - 0px); height: 100%; overflow: hidden; pointer-events: auto; min-width: 1200px; left: 0px; right: 0px; bottom: 0px;">
                           <div class="bgColor" id="comp-ivku2gb93balatabgcolor" style="position: absolute; width: 100%; height: 100%; top: 0px; background-color: transparent;">
                             <div id="comp-ivku2gb93balatabgcoloroverlay" class="bgColoroverlay" style="width: 100%; height: 100%; position: absolute; top: 0px; opacity: 1;"></div>
                           </div>
                         </div>
-                        <div id="comp-ivku2gb93inlineContent" class="strc1inlineContent" style="position: relative; width: calc(100% - 0px); min-width: 980px;">
+                        <div id="comp-ivku2gb93inlineContent" class="strc1inlineContent" style="position: relative; width: calc(100% - 0px); min-width: 1200px;">
                           <!-- Up part -->
                           <div data-content-width="980" data-is-mesh="true" class="strc1" id="comp-ivku2gd0"
                             style="position: relative; width: 100%; left: 0px; flex: 980 1 0%; margin-left: 0px; min-width: 980px; top: 0px; margin-top: 0px; margin-bottom: 0px; display: flex;">
@@ -115,14 +115,12 @@
                                     <h6 class="font_6" style="line-height:1.5em;">
                                       <span style="font-weight:bold;">
                                         <span style="letter-spacing:0.05em;">
-                                          Visualizations will include interesting views on cinematography datasets.
-                                          The goal is to show the movies data from different perspectives. </br>
-                                          Visualizations will be divided on two topics. One visualization is focused on locations of movies filmed in San Francisco. Second is focused on movie ratings analysis.
-                                        </br>
-                                        In general, when you think of locations where the movies masteprieces were filmed, Los Angeles and New York come to mind first.
-                                        <!-- The data and map can also make good tourist business. -->
-                                        <!-- This map is absolutely unique -->
-                                        <!-- cinematography history -->
+                                          In general, when you think of locations where the movies masteprieces were filmed, Los Angeles and New York come to mind first. The purpose of these visualizations is to show that SF is a cinematic city with long movie history.
+                                          The goal was divided into two parts: locations and ratings. Firstly, the location map is absolutely unque and intended to show 100 year hirstory of where and when the movies were filmed.
+                                          Secondly, ratings chart purpose is to show raitings of movies filmed in SF compared to all movies raitings.
+                                          <!-- The data and map can also make good tourist business. -->
+                                          <!-- This map is absolutely unique -->
+                                          <!-- cinematography history -->
                                         </span>
                                       </span>
                                     </h6>
@@ -158,6 +156,9 @@
                                     Website style: <u><a href="https://www.wix.com/account/sites">Wix</a></u> </br>
                                     Prototype Applications: <u><a href="https://www.tableau.com/">Tableau</a></u>, <u><a href="https://app.rawgraphs.io/">Raw Graphs</a></u> </br>
                                     D3-simple-slider: <u><a href="https://bl.ocks.org/johnwalley/e1d256b81e51da68f7feb632a53c3518">bl.ocks</a></u> </br>
+                                    Continuous Legend: <u><a href="http://bl.ocks.org/syntagmatic/e8ccca52559796be775553b467593a9f">bl.ocks</a></u> </br>
+                                    Zoomable Map Tiles: <u><a href="https://observablehq.com/@d3/zoomable-map-tiles">observable</a></u> </br>
+                                    Zoomable sunburst: <u><a href="https://observablehq.com/@d3/zoomable-sunburst">observable</a></u> </br>
                                     Coming soon...
                                   </h6>
                                 </div>
